# LiteArm

src/: README.md
src/litearm_a10_251125/: CMakeLists.txt  package.xml
src/litearm_a10_251125/config/: display.rviz  joint_names_LiteArm_A10_251125.yaml
src/litearm_a10_251125/launch/: display.launch  display.launch.py  gazebo.launch
src/litearm_a10_251125/meshes/: base_link.STL  base_link_simplify.STL  l_gripper_link.STL  l_joint1_link.STL  l_joint1_link_simplify.STL  l_joint2_link.STL  l_joint4_link.STL  l_joint5_link.STL  l_joint6_link.STL  l_joint7_link.STL  l_joint7_link_simplify.STL  l_l_finger_link.STL  l_r_finger_link.STL  r_gripper_link.STL  r_joint1_link.STL  r_joint1_link_simplify.STL  r_joint2_link.STL  r_joint4_link.STL  r_joint5_link.STL  r_joint6_link.STL  r_joint7_link.STL  r_joint7_link_simplify.STL  r_l_finger_link.STL  r_r_finger_link.STL  torso_link.STL  torso_link_simplify.STL
src/litearm_a10_251125/urdf/: LiteArm_A10_251125.csv  LiteArm_A10_251125.urdf
src/litearm_a10_description/: CMakeLists.txt  package.xml
src/litearm_a10_description/config/: joint_names_LiteArm_A10_251224.yaml  rviz.rviz
src/litearm_a10_description/launch/: display.launch.py  gazebo.launch
src/litearm_a10_description/meshes/: base_link.STL  base_link_simplify.STL  l_joint1_link.STL  l_joint1_link_simplify.STL  l_joint2_link.STL  l_joint4_link.STL  l_joint5_link.STL  l_joint6_link.STL  l_joint7_link.STL  l_joint7_link_simplify.STL  r_joint1_link.STL  r_joint1_link_simplify.STL  r_joint2_link.STL  r_joint4_link.STL  r_joint5_link.STL  r_joint6_link.STL  r_joint7_link.STL  r_joint7_link_simplify.STL  torso_link.STL  torso_link_simplify.STL
src/litearm_a10_description/urdf/: LiteArm_A10_251224.csv  LiteArm_A10_251224.urdf
src/litearm_config/: .setup_assistant  CMakeLists.txt  package.xml
src/litearm_config/config/: LiteArm_A10_251125.ros2_control.xacro  LiteArm_A10_251125.srdf  LiteArm_A10_251125.urdf.xacro  LiteArm_A10_251125_hardware.ros2_control.xacro  LiteArm_A10_251125_hardware.urdf.xacro  initial_positions.yaml  joint_limits.yaml  kinematics.yaml  moveit_controllers.yaml  moveit_controllers_hardware.yaml  ros2_controllers.yaml  ros2_controllers_hardware.yaml
src/litearm_config/launch/: demo.launch.py  hardware.launch.py  hardware_moveit_rviz.launch.py  move_group.launch.py  moveit_rviz.launch.py  rsp.launch.py  setup_assistant.launch.py  spawn_controllers.launch.py  static_virtual_joint_tfs.launch.py  warehouse_db.launch.py
src/litearm_config/robot_param/: litearm_right_arm.yaml  litearm_right_arm_motors.yaml
src/litearm_config/scripts/: aging_test.py
src/litearm_examples/: CMakeLists.txt  litearm_joint_state_reader.cpp  package.xml  test_single_joint.py
src/litearm_hardware/: CMakeLists.txt  litearm_hardware.xml  package.xml
src/litearm_hardware/config/: panthera_hardware.ros2_control.xacro  ros2_controllers.yaml
src/litearm_hardware/include/litearm_hardware/: litearm_hardware_interface.hpp
src/litearm_hardware/include/panthera_hardware/: panthera_hardware_interface.hpp
src/litearm_hardware/launch/: panthera_hardware.launch.py
src/litearm_hardware/src/: litearm_hardware_interface.cpp
src/litearm_robot/: CMakeLists.txt  MIGRATION_GUIDE.md  README.md  package.xml
src/litearm_robot/Panthera-HT_description/: CMakeLists.txt  package.xml
src/litearm_robot/Panthera-HT_description/config/: joint_names_Panthera-HT_description.yaml
src/litearm_robot/Panthera-HT_description/launch/: display.launch  gazebo.launch
src/litearm_robot/Panthera-HT_description/meshes/: link1.STL  link4.STL  link5.STL  link6.STL
src/litearm_robot/Panthera-HT_description/urdf/: Panthera-HT_description.csv  Panthera-HT_description_leader.urdf
src/litearm_robot/cmake/: litearm_robotConfig.cmake.in
src/litearm_robot/doc/: CLAUDE.md  使用指南.md
src/litearm_robot/example/: canboard_update.cpp  motor_feedack.cpp  motor_move_zero.cpp  motor_msg_subscriber.cpp  motor_run.cpp  motor_set_zero.cpp  parse_demo.cpp
src/litearm_robot/examples/: 0_robot_get_state.cpp  0_robot_set_zero.cpp  1_PD_control.cpp  1_PosVel_control.cpp  2_joint_impedance_control.cpp  3_cartesian_impedance_control.cpp  cartesian_impedance_ab_motion.cpp  pure_cartesian_impedance_control.cpp  right_arm_gravity_calc.cpp  right_arm_gravity_compensation.cpp  test_motor_enable.cpp
src/litearm_robot/include/: parse_robot_params.hpp  serial_driver.hpp  serial_struct.hpp
src/litearm_robot/include/hardware/: canboard.hpp  canport.hpp  motor.hpp  robot.hpp
src/litearm_robot/include/litearm_robot/: LiteArm.hpp
src/litearm_robot/msg/: motor_msg.lcm
src/litearm_robot/msg/motor_msg/: motor_msg.hpp
src/litearm_robot/robot_param/: Follower.yaml  Follower_absolute.yaml  Leader.yaml
src/litearm_robot/robot_param/motor_param/: 6dof_Panthera_params_follower.yaml  6dof_Panthera_params_leader.yaml  6dof_Panthera_params_leader.yaml.bak  motor_1.yaml  motor_6.yaml  robot_config.yaml
src/litearm_robot/src/: parse_robot_params.cpp  serial_driver.cpp
src/litearm_robot/src/crc/: crc16.cpp  crc8.cpp
src/litearm_robot/src/hardware/: canboard.cpp  canport.cpp  motor.cpp  robot.cpp
src/litearm_robot/src/litearm/: LiteArm.cpp
src/litearm_robot/third_part/lcm/: CMakeLists.txt
src/litearm_robot/third_part/lcm/docs/: CMakeLists.txt
src/litearm_robot/third_part/serial_cmake/: CMakeLists.txt
src/litearm_robot/third_part/serial_cmake/cmake/: serial_cmakeConfig.cmake.in  version.cmake
src/litearm_robot/urdf/: LiteArm_A10_251224_right_arm.urdf  Panthera-HT_description_with_finger.urdf.xacro
