<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>litearm_robot</name>
  <version>1.0.0</version>
  <description>LiteArm A10 robotic arm SDK with hardware interface support</description>
  <maintainer email="tk@todo.todo">tk</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>libserialport</depend>
  <depend>lcm</depend>
  <depend>yaml-cpp</depend>
  <depend>ament_index_cpp</depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
